src/test/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0658]: statements in statics are unstable (see issue #48821)
  --> $DIR/mod-static-with-const-fn.rs:29:5
   |
LL |     *FOO.0.get() = 5;
   |     ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/mod-static-with-const-fn.rs:34:5
   |
LL |     foo();
   |     ^^^^^

error: aborting due to 2 previous errors

Some errors occurred: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
